--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"> <i class="fas fa-fire"></i>  TEST: WEBSITE</a>
+            <a href="https://xtian69420.github.io/testHostLiveGit/" id="navbar__logo"> <i class="fas fa-fire"></i>  TEST: WEBSITE</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -21,17 +21,17 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="https://xtian69420.github.io/testHostLiveGit/" class="navbar__links">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/desc.html" class="navbar__links">
+                    <a href="https://xtian69420.github.io/testHostLiveGit/" class="navbar__links">
                         Description
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">
                         Socials 
                     </a>
                 </li>
