--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="https://xtian69420.github.io/testHostLiveGit/" class="navbar__links">
+                    <a href="https://www.pinterest.com/pin/facecam-drake--867998528154586942/" class="navbar__links">
                         Description
                     </a>
                 </li>
