--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>VIRTUAL HOST TEST</h1>
                 <h2>Xtian 0-0</h2>
                 <p>Practice makes perfect</p>
-                <button class="main__btn"><a href="/">My Projects</a></button>
+                <button class="main__btn"><a href="https://github.com/Xtian69420">My Projects</a></button>
 
             </div>
             <div class="main__image--container">
